examples/test/testpolicy16466.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16466
  namespace: namespace158
spec:
  podSelector:
    matchLabels:
      key25: value9
      key45: value9
      key35: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value46
      podSelector:
        matchLabels:
          key21: value6
